[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
axum-extra = { version = "0.9.6", features = ["cookie"] }
cargo-manifest = "0.17.0"
hex = "0.4.3"
html-escape = "0.2.13"
itertools = "0.13.0"
jsonwebtoken = "9.3.0"
leaky-bucket = "1.1.2"
rand = "0.8.5"
serde = "1.0.215"
serde_json = "1.0.134"
serde_yml = "0.0.12"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = ["uuid", "chrono", "postgres"] }
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = "1.28.2"
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["fs"] }
uuid = "1.11.0"
